--- a/user/app/ranger/rifle.conf
+++ b/user/app/ranger/rifle.conf
@@ -65,6 +65,7 @@ ext x?html?, has w3m,               terminal = w3m "$@"
 # Misc
 #-------------------------------------------
 # Define the "editor" for text files as first action
+mime ^text,  has neovide,   X, flag f = neovide "$@"
 ext org, has emacsclient,       X, flag f = emacsclient -c "$@"
 mime ^text,  has emacsclient,   X, flag f = emacsclient -c "$@"
 
